--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   cloud_firestore: ^5.5.0
   firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
+  widget_to_marker: ^1.0.6
+  sensors_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +79,7 @@ flutter:
   assets:
 
 
-    - assets/images/vta.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
