--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_core: ^3.8.0
   widget_to_marker: ^1.0.6
   sensors_plus: ^6.1.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
